# godot-gdextension

./: CMakeLists.txt  README.md
GDExtension/: project.godot
GDExtensionExampleProject/: icon.svg.import  project.godot
GDExtensionExampleProject/scenes/: main.tscn
src/: CMakeLists.txt  gdexample.cpp  gdexample.hpp  gdextension.in  register_types.cpp  register_types.hpp
